<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filter.ui.fragment.IndustryFragment">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/image_padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/image_padding_medium"
            android:paddingStart="0dp"
            android:src="@drawable/arrow_back_24px" />

        <TextView
            style="@style/Text.Medium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standart_margin"
            android:text="@string/industry_selection" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_search_field"
        style="@style/SearchInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/image_padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_search_field"
            style="@style/SearchInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_industry"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColorHint="?attr/formsHintColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_search_field_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/icon_padding"
        android:paddingVertical="@dimen/image_padding_medium"
        android:src="@drawable/search_24px"
        app:layout_constraintBottom_toBottomOf="@id/tl_search_field"
        app:layout_constraintEnd_toEndOf="@id/tl_search_field"
        app:layout_constraintTop_toTopOf="@id/tl_search_field" />

    <include
        android:id="@+id/industry_list"
        layout="@layout/industry_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tl_search_field"
        app:layout_constraintBottom_toTopOf="@id/btn_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_error_message"
        style="@style/Text.Medium22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standart_margin"
        android:gravity="center_horizontal"
        android:text="@string/industry_empty_list"
        app:drawableTopCompat="@drawable/image_fly"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_header"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progressbar_size"
        android:layout_height="@dimen/progressbar_size"
        android:indeterminateTint="@color/blue"
        android:indeterminateTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_header" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_select"
        style="@style/Button.Blue"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/image_margin_medium"
        android:text="@string/select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
